# atgen

./: .gitignore  LICENSE.md  README.md  config_user.yaml  install.sh  pyproject.toml  requirements.txt  web_al.py
.github/workflows/: python-app.yml
configs/: base.yaml  custom.yaml  test.yaml
configs/data/: aeslc.yaml  gigaword.yaml  test.yaml  user_data.yaml  xsum.yaml
configs/domain_adaptation/: base.yaml  gigaword.yaml  large.yaml  llama.yaml
configs/labeller/: api_llm.yaml  custom_llm.yaml  golden.yaml  human.yaml
pages/: 1_Metrics.py  2_Generations.py  3_Labeled_examples.py  4_Annotation.py
prompts/big-bench-hard/answer-only/: README.md  boolean_expressions.txt  causal_judgement.txt  date_understanding.txt  disambiguation_qa.txt  dyck_languages.txt  formal_fallacies.txt  geometric_shapes.txt  hyperbaton.txt  logical_deduction_seven_objects.txt  movie_recommendation.txt  multistep_arithmetic_two.txt  navigate.txt  object_counting.txt  penguins_in_a_table.txt  reasoning_about_colored_objects.txt  ruin_names.txt  salient_translation_error_detection.txt  snarks.txt  sports_understanding.txt  temporal_sequences.txt  tracking_shuffled_objects_seven_objects.txt  web_of_lies.txt  word_sorting.txt
prompts/big-bench-hard/chain-of-thought/: README.md  boolean_expressions.txt  causal_judgement.txt  date_understanding.txt  disambiguation_qa.txt  dyck_languages.txt  formal_fallacies.txt  geometric_shapes.txt  hyperbaton.txt  logical_deduction_seven_objects.txt  movie_recommendation.txt  multistep_arithmetic_two.txt  navigate.txt  object_counting.txt  penguins_in_a_table.txt  reasoning_about_colored_objects.txt  ruin_names.txt  salient_translation_error_detection.txt  snarks.txt  sports_understanding.txt  temporal_sequences.txt  tracking_shuffled_objects_five_objects.txt  web_of_lies.txt  word_sorting.txt
scripts/: run_active_learning.py  run_experiment_design.py
src/atgen/labellers/: __init__.py  base_labeller.py  custom_llm_labeller.py  get_labeller.py  golden_labeller.py  human_labeller.py  labelling_utils.py
src/atgen/metrics/: __init__.py  (+7 more)
test/: test_benchmark.py
(+53 files in other folders)
